Fixing conflict resolution